# chief

./: .dockerignore  .env  .env.development  .env.development.compose  .env.local.example  .env.production  .env.production.stage  .gitignore  .gitmodules  .mcp.json  AGENTS.local.md  AGENTS.md  LICENSE  README.md  TODO.md  config.py  pyproject.toml
.cursor/: mcp.json  (+2 more)
backend/: Dockerfile.dev  Dockerfile.prod  Dockerfile.prod.dockerignore  entrypoint.sh  manage.py  olib  pyproject.toml
backend/apps/agents/: admin.py  apps.py  delete.py  hardcoded.py  ingest.py  materialize.py  models.py  signals.py  spec.py  tool_wiring.py  tools_wiring.py
backend/apps/bus/: apps.py  channels.py  client.py  leases.py  resources.py
backend/apps/keys/: admin.py  apps.py  credential_guides.py  crypto.py  exceptions.py  models.py  types.py
backend/apps/local_disk/: __init__.py  agent_parse.py  agent_sync.py  apps.py  bootstrap.py  hashing.py  key_parse.py  key_sync.py  owner.py  paths.py  sync.py  watch.py
backend/apps/local_sync/: __init__.py  apps.py  reconcile.py  tasks.py
backend/apps/queues/: admin.py  apps.py  exceptions.py  models.py  releasable.py  tasks.py
backend/apps/runner/: apps.py  budget_gate.py  dispatch.py  errors.py  hooks.py  limits.py  llm_config.py  loop.py  run_agent.py  scheduling.py  session_lifecycle.py  session_start.py  spec_loader.py  start.py  tasks.py  tool_definitions.py  trigger_tasks.py
backend/chief/: __init__.py  apps.py  asgi.py  celery.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
backend/libs/: dropbox_scopes.py  google_scopes.py
(+520 files in other folders)
