[project]
name = "chief-backend-env"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "Django>=5.2.13,<5.3",
  "python-dotenv==1.2.2",
  "django-environ==0.13.0",
  "psycopg[binary]==3.3.3",
  "psycopg[pool]==3.3.3",
  "redis==7.3.0",
  "celery==5.6.2",
  "jinja2==3.1.6",
  "django-cors-headers==4.9.0",
  "django_middleware_global_request==0.3.6",
  "django-extensions==4.1",
  "pydantic==2.12.5",
]

[tool.uv]
package = false
