[project]
name = "chief-backend-env"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "Django>=5.2.13,<5.3",
  "python-dotenv==1.2.2",
  "django-environ==0.13.0",
  "psycopg[binary]==3.3.3",
  "psycopg[pool]==3.3.3",
  "redis==7.3.0",
  "celery==5.6.2",
  "cryptography==46.0.5",
  "jinja2==3.1.6",
  "django-cors-headers==4.9.0",
  "django-extensions==4.1",
  "pydantic==2.12.5",
  "openai==1.109.1",
  "anthropic==0.84.0",
  "PyYAML==6.0.2",
  "uvicorn==0.42.0",
  "uuid7==0.1.0",
  "croniter==6.0.0",
  "django-celery-beat==2.8.1",
  "google-api-python-client==2.80.0",
  "google-auth==2.36.0",
  "dropbox",
  "httpx==0.28.1",
  "ruamel.yaml==0.19.1",
]

[tool.uv]
package = false
